--- a/Jeux.DAL.Client/Jeux.DAL.Client.csproj
+++ b/Jeux.DAL.Client/Jeux.DAL.Client.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Mappers\Mapper.cs" />
+    <Compile Include="Models\LoginInfo.cs" />
     <Compile Include="Models\Utilisateur.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\UtilisateurService.cs" />
