--- a/Jeux.DAL.Global/Jeux.DAL.Global.csproj
+++ b/Jeux.DAL.Global/Jeux.DAL.Global.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Mappers\Mapper.cs" />
+    <Compile Include="Models\LoginInfo.cs" />
     <Compile Include="Models\Utilisateur.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\BasicRepository.cs" />
@@ -50,6 +51,11 @@
     <Compile Include="Repositories\IUtilisateurRepository.cs" />
     <Compile Include="Repositories\UtilisateurRepository.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\ToolBox.ADO\ToolBox.ADO.csproj">
+      <Project>{b96715b4-96d0-41bd-9c50-22fb41f5c931}</Project>
+      <Name>ToolBox.ADO</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
