--- a/Jeux.DAL.Global/Jeux.DAL.Global.csproj
+++ b/Jeux.DAL.Global/Jeux.DAL.Global.csproj
@@ -43,12 +43,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Mappers\Mapper.cs" />
+    <Compile Include="Models\Jeux\AffichageDeListeJeux.cs" />
     <Compile Include="Models\LoginInfo.cs" />
     <Compile Include="Models\Utilisateur.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\BasicRepository.cs" />
     <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\IUtilisateurRepository.cs" />
+    <Compile Include="Repositories\JeuxRepository.cs" />
     <Compile Include="Repositories\UtilisateurRepository.cs" />
   </ItemGroup>
   <ItemGroup>
